<resources>
    <string name="app_name">CyclingStatsProject</string>
    <string name="api_key">bvefpa6ewwjbvrzajzvdp2vv</string>
    <string name="sezon">Sezon:</string>
    <string name="start">start:</string>
    <string name="koniec">koniec:</string>
    <string name="title_activity_stages">Stages</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_stage">StageActivity</string>
    <string name="nazwa">Nazwa</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="time">Time</string>
    <string name="title_activity_stage_details">StageDetailsActivity</string>
    <string name="tournaments">Tournaments</string>
    <string name="teams">Teams</string>
    <string name="title_activity_teams">TeamsActivity</string>
    <string name="profil_zawodnika">Profil zawodnika</string>
    <string name="profil_zespolu">Profil Zespołu</string>
    <string name="name">Name:</string>
    <string name="country_code">Country Code:</string>
    <string name="nationality">Nationality</string>
    <string name="team_name">Team name:</string>
    <string name="departure_city">Departure_city</string>
    <string name="arrival_city">Arrival_city</string>
    <string name="distance">distance</string>
</resources>